--- a/lab4/hwork.css
+++ b/lab4/hwork.css
@@ -103,5 +103,129 @@
   top: 170%;
   font-size: 20px;
   margin-left: 5px;
-  margin-bottom: ;
+}
+.card-tong4 {
+  width: 1100px;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.card-img4 {
+  width: auto;
+
+  height: 100%;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+.card-img4 img {
+  width: 100%;
+  height: 150px;
+  border-radius: 40px 40px 40px;
+}
+h1 {
+  text-decoration: none;
+  color: #000;
+}
+.card-tong5 {
+  width: 1100px;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.card-img5 img {
+  width: 168px;
+  height: 246px;
+  position: relative;
+  border-radius: 10px 10px 10px;
+  border: 1px solid #fff;
+}
+.name5 {
+  color: #fff;
+  position: absolute;
+  top: 170%;
+  font-size: 20px;
+  margin-left: 5px;
+}
+.card-tong6 {
+  width: 1100px;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.card-tong6 img {
+  width: 255px;
+
+  height: 100%;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+.card-tong7 {
+  width: 1100px;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.card-tong8 {
+  width: 1100px;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.card-img8 {
+  width: auto;
+
+  height: 100%;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+.name8 {
+  width: 100%;
+  font-size: 15px;
+  position: absolute;
+  top: 0%;
+  font-family: "Times New Roman", Times, serif;
+  margin-left: 10px;
+  color: #fff;
+}
+.card-tong8 img {
+  width: 336px;
+  position: relative;
+  height: 150px;
+}
+.tap8 {
+  width: 100%;
+  font-size: 50px;
+  position: absolute;
+  bottom: 0%;
+  left: 100%;
+  transform: translate(-20%, 0%);
+  color: #fff;
 }
