--- a/lab7/th.css
+++ b/lab7/th.css
@@ -4,14 +4,15 @@
   align-items: center;
   min-height: 100vh;
   background-color: rgb(194, 91, 91);
+  /* transform: rotate(45deg); */
 }
 .box {
   background-color: #ffffff;
   width: 100px;
   height: 100px;
   position: relative;
-  transform: rotate(45deg);
-  animation: stretch 2s ease-out 0s alternate infinite none running;
+  /* transform: rotate(45deg); */
+  animation: stretch 2s ease-out 0s alternate infinite running;
 }
 .box1,
 .box2 {
@@ -28,20 +29,34 @@
   left: -50%;
 }
 @keyframes stretch {
-  from {
+  from,
+  to {
     transform: scale(1);
+    transform: rotate(45deg);
   }
   40% {
     transform: scale(1.5);
     text-shadow: 0 10px 25px rgb(0, 0, 0/30%);
+    transform: rotate(45deg);
   }
   50% {
     transform: scale(1.5);
     text-shadow: 0 10px 25px rgb(0, 0, 0/30%);
+    transform: rotate(45deg);
   }
-  to {
-    transform: scale(1);
+  60% {
+    transform: scale(1.5);
+    text-shadow: 0 10px 25px rgb(0, 0, 0/30%);
+    transform: rotate(45deg);
   }
-}
-.box {
+  70% {
+    transform: scale(1.5);
+    text-shadow: 0 10px 25px rgb(0, 0, 0/30%);
+    transform: rotate(45deg);
+  }
+  80% {
+    transform: scale(1.5);
+    text-shadow: 0 10px 25px rgb(0, 0, 0/30%);
+    transform: rotate(45deg);
+  }
 }
