--- a/ktra/ktra.css
+++ b/ktra/ktra.css
@@ -131,7 +131,7 @@ a {
 .bg {
   width: 1222px;
   /* position: absolute; */
-  background-image: url(http://unvab.com/snow-free-html/assets/images/post-6.jpg);
+  background-image: url(post-6.jpg);
   background-position: 50% 50%;
 }
 .card-doc {
